# Robot_Pi_4WD_ROS

./: .gitignore  Dockerfile  README.md  camera.conf  cmd_vel_stamped.py  docker-compose.yaml  head_movement.py  imu_swapper.py  microros.conf  publish_ip.py  ros_entrypoint.sh  speech-recognition.py  start_agent_rpi5.sh  start_bno055_imu.sh  start_camera.sh  start_eyes.py  start_foxglove_bridge.sh  start_mapping.sh  start_microros.sh  start_navigation.sh  start_robot.sh  start_speech.py  stereo_image_proc.launch.py  tof_publisher.py
.devcontainer/: devcontainer.json  post_creation_script.sh
calibration/: left.yaml  right.yaml
config/: bno055.cal  bno055_params.yaml  nav2_params.yaml  slam_toolbox_params.yaml
maps/: home_full.pgm  home_full.yaml  home_new.data  home_new.pgm  home_new.yaml
pi-files/: camera.conf  start_camera.sh
speech-recognition/: kiro.pmdl  listen.py  main.py  robot.pmdl  robot_en_raspberry-pi_v3_0_0.ppn  smiley_en_raspberry-pi_v3_0_0.ppn  start_listener.py
src/robot_pi_4wd_ros/: CMakeLists.txt  package.xml
src/robot_pi_4wd_ros/config/: bno055_params.yaml  diff_drive_controller.yaml  localization_params.yaml
src/robot_pi_4wd_ros/description/: description.urdf.xacro
src/robot_pi_4wd_ros/launch/: diff_drive_example.launch.py
src/yahboomcar_base_node/: CMakeLists.txt  package.xml
src/yahboomcar_base_node/src/: base_node_X3.cpp
src/yahboomcar_bringup/: setup.py
supervisor/: camera.conf  depth.conf  eyes.conf  imu2.conf  imu_swapper.conf  mapping.conf  microros.conf  navigation.conf  publish_ip.conf  robot.conf  speech.conf
(+3 files in other folders)
