<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_pi_4wd_ros</name>
  <version>0.0.0</version>
  <description>Robot 4WD</description>

  <maintainer email="kirikakis@gmail.com">Stefanos Kyrikakis</maintainer>
  <author email="kirikakis@gmail.com">Stefanos Kyrikakis</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
